2020-04-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Replace gtk_widget_hide_all with
      gtk_widget_hide in geda_menu_item_hide_all. Replace switch case
      with if/else. Utilize macro:

          * geda_get_widget_window
          * geda_set_widget_style
          * geda_get_widget_parent

2020-04-24 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_accel_label.c: Revise geda_accel_label_draw to not
      call gtk_widget_set_allocation since the allocation being manipulated
      is by reference and utilize local reference to allocation. Replace
      switch case with if/else.

2020-04-23 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_accel_label.c: Eliminate conditional GSEAL_ENABLE
      directive; use geda_get_misc_xpad instead.

    * src/widgets/geda_menu_item.c: Replace switch case with if/else.
      Compound last conditional in geda_menu_item_position_menu.
      Utilize:

          * gtk_widget_get_allocation

2020-04-22 Wiley E. Hill <wileyhill@gmail.com>

    * src/dialogs/geda_image_chooser.c: Remove conditional directives
      for popup_tips and add else directive in build_menu and utilize
      gtk_widget_set_tooltip_text to set the tooltip text when Gtk>2.

    * src/widgets/geda_menu_button.c: Eliminate unneeded GObject cast
      in geda_menu_button_get_property. Revise geda_menu_button_set_
      arrow_tooltip to compile using gtk_widget_set_tooltip_text when
      when Gtk>2.

2020-04-21 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros:

          * geda_get_button_focus_on_click
          * geda_get_button_label_text
          * geda_get_button_use_stock
          * geda_get_button_use_underline

    * src/widgets/geda_menu_button.c: Replace dynamic cast with static cast
      in geda_menu_button_set_property. Utilize macros:

          * geda_get_button_focus_on_click
          * geda_get_button_label_text
          * geda_get_button_use_stock